fix(*) minor updates

--- a/EE-dyplom.bib
+++ b/EE-dyplom.bib
@@ -20,7 +20,8 @@
     author = {Wacław Gawędzki},
     title = {Pomiary elektryczne wielkości nieelektrycznych},
     publisher = {Wydawnictwa AGH},
-    year = {Kraków 2010},
+    address={Kraków},
+    year = {2010},
 }
 @misc{rtd_norm,
     author = {{PN-EN 60751:2009}},
@@ -37,13 +38,15 @@
     author = {K. Hoffman},
     title = {An introduction to measurements using strain gages},
     publisher = {HBM GmbH},
-    year = {Darmstadt 1989},
+    address={Darmstadt},
+    year = {1989},
 }
 @book{milek2006,
     author = {M. Miłek},
     title = {Metrologia elektryczna wielkości nieelektrycznych},
     publisher = {Oficyna Wydawnicza Uniwerytetu Zielonogórskiego},
-    year = {Zielona Góra 2006},
+    address={Zielona Góra},
+    year = {2006},
 }
 @unpublished{sensory_wykład,
   author = {Andrzej Michalski and Bogdan Dziadak},
