--- a/text/app/ui.tex
+++ b/text/app/ui.tex
@@ -22,20 +22,20 @@ Powyższe elementy przedstawione zostały na rysunkach \ref{img:config-tasks},
 \ref{img:generated-graph}, \ref{img:theory}.
 
 \begingroup
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.65\textwidth]{app-ui/config-tasks}
   \caption{\label{img:config-tasks}Komponenty do konfiguracji, wyświetlania zadań~i~przyjmowania
     odpowiedzi.}
 \end{figure}
 
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.65\textwidth]{app-ui/theory}
   \caption{\label{img:theory}Komponent prezentujący wzory oraz dane.}
 \end{figure}
 
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.65\textwidth]{app-ui/generated-graph}
   \caption{\label{img:generated-graph}Komponent wyświetlający wygenerowany wykres.}
