New chapters + sections

--- a/EE-dyplom.bib
+++ b/EE-dyplom.bib
@@ -74,7 +74,8 @@
     note={\href{https://www.typescriptlang.org/}{<https://www.typescriptlang.org/>}, dostęp uzyskano: 2021-11}
 }
 @misc{ts-docs,
-    note={Dokumentacja języka Typescript \href{https://www.typescriptlang.org/docs/}{<https://www.typescriptlang.org/docs/>},
+    note={Dokumentacja języka Typescript \href{https://www.typescriptlang.org/docs/}
+    {<https://www.typescriptlang.org/docs/>},
     dostęp uzyskano: 2021-11}
 }
 @misc{snyk-licences,
@@ -94,6 +95,11 @@ month = {04},
 pages = {191-206},
 title = {A Model of Component-Based Programming},
 doi = {10.1007/978-3-540-75698-9_13}
+}
+@misc{chakra-docs,
+    note={Dokumentacja biblioteki Chakra UI \href{https://chakra-ui.com/docs/}
+    {<https://chakra-ui.com/docs/>},
+    dostęp uzyskano: 2021-11}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
