--- a/text/app/app.tex
+++ b/text/app/app.tex
@@ -36,11 +36,14 @@ Niniejszy rozdział ma na celu:
         jest zaimplementowany na podstawie teorii przetworników pomiarowych.
 \end{itemize}
 
-\section{Implementacja interfejsu użytkownika}
+\section{Implementacja interfejsu użytkownika}\label{sect:ui}
 \input{text/app/ui}
 
-\section{Przekazywanie danych pomiędzy komponentami}
+\section{Przekazywanie danych pomiędzy komponentami}\label{sect:context}
 \input{text/app/context}
 
-\section{Implementacja teorii sensorów pomiarowych}
+\section{Implementacja teorii sensorów pomiarowych}\label{sect:sensors-code}
 \input{text/app/sensors-code}
+
+\section{Implementacja pełnego laboratorium}\label{sect:laboratory}
+\input{text/app/laboratory}
