--- a/text/app/ui.tex
+++ b/text/app/ui.tex
@@ -1,12 +1,14 @@
 % Opisanie tego jak zbudowane jest UI ogólnie, nawiązanie, że opisane zostaną tylko te najważniejsze
-Całość kodu źródłowego aplikacji, która odpowiedzialna jest za renderowanie interfejsu użytkownika
-wykorzystuje paradygmat programowania komponentowego -- pozwala na projektowanie, implementację oraz
-testowanie elementów aplikacji niezależnie od siebie. Dodatkowo, jeżeli zaistnieje taka potrzeba,
-część kodu źródłowego może być stworzona~w~zupełnie innym języku programowania, a~następnie
-dołączona do aplikacji, gdzie będzie idealnie współpracować~z~resztą obecnych już komponentów
-\cite{component-programming}. Interfejs użytkownika~w~aplikacji jest~w~języku angielskim. Został
-stworzony~w~taki sposób, aby finalna aplikacja mogła być wykorzystywana przez użytkowników nie
-tylko~z~Polski.
+Całość kodu źródłowego aplikacji, która odpowiedzialna jest za renderowanie interfejsu użytkownika wykorzystuje
+paradygmat programowania komponentowego -- pozwala na projektowanie, implementację oraz testowanie elementów aplikacji
+niezależnie od siebie. Dodatkowo, jeżeli zaistnieje taka potrzeba, część kodu źródłowego może być stworzona~w~zupełnie
+innym języku programowania, a~następnie dołączona do aplikacji, gdzie będzie idealnie współpracować~z~resztą obecnych
+już komponentów \cite{component-programming}. Interfejs użytkownika~w~aplikacji jest~w~języku angielskim. Został
+stworzony~w~taki sposób, aby finalna aplikacja mogła być wykorzystywana przez użytkowników nie tylko~z~Polski.
+Interfejs użytkownika zbudowany został wykorzystując do tego bibliotekę \textit{Chakra UI}, która jest zbiorem
+modularnych komponentów przydatnych do budowania złożonych aplikacji~w~React. Udostępnia ona takie komponenty
+jak \texttt{HStack, VStack} pozwalające na ustawianie elementów na stronie, \texttt{Button, Radio, Select} -- gotowe
+przyciski, kontrola formularzy oraz \texttt{Text, Heading} do manipulacji nagłówkami~i~tekstem na stronie.
 
 % Opis poszególnych, ważnych składowych UI ze snippetami
 \subsection{Elementy interfejsu}
@@ -18,44 +20,33 @@ Głównymi elementami interfejsu są komponenty odpowiedzialne za:
   \item[--] prezentowanie wzorów oraz danych niezbędnych do obliczeń,
   \item[--] wyświetlanie wygenerowanego wykresu.
 \end{itemize}
-Powyższe elementy przedstawione zostały na rysunkach \ref{img:config-tasks},
-\ref{img:generated-graph}, \ref{img:theory}.
+Powyższe elementy przedstawione zostały na rysunkach \ref{img:config-tasks}, \ref{img:theory},
+\ref{img:generated-graph}.
 
 \begingroup
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.65\textwidth]{app-ui/config-tasks}
-  \caption{\label{img:config-tasks}Komponenty do konfiguracji, wyświetlania zadań~i~przyjmowania
-    odpowiedzi.}
-\end{figure}
+\addimage{0.65}{app-ui/config-tasks}{\label{img:config-tasks}Komponenty do konfiguracji,
+  wyświetlania zadań~i~przyjmowania odpowiedzi}
 
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.65\textwidth]{app-ui/theory}
-  \caption{\label{img:theory}Komponent prezentujący wzory oraz dane.}
-\end{figure}
+\addimage{0.65}{app-ui/theory}{\label{img:theory}Komponent prezentujący wzory oraz dane}
 
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[width=0.65\textwidth]{app-ui/generated-graph}
-  \caption{\label{img:generated-graph}Komponent wyświetlający wygenerowany wykres.}
-\end{figure}
+\addimage{0.65}{app-ui/generated-graph}{\label{img:generated-graph}Komponent wyświetlający
+  wygenerowany wykres}
 \endgroup
 
-\subsubsection{Komponent do konfiguracji sensorów}
+\subsubsection{Konfiguracja sensorów}
 \input{text/app/ui-parts/sensor-config}
 
-\subsubsection{Komponent wyświetlający zadania oraz wygenerowany zestaw danych}
+\subsubsection{Wyświetlanie zadań oraz wygenerowanego zestawu danych}
 \input{text/app/ui-parts/tasks}
 
 
-\subsubsection{Komponent odpowiedzialny za przyjmowanie i weryfikację odpowiedzi}
+\subsubsection{Przyjmowanie~i~weryfikacja odpowiedzi użytkownika}
 \input{text/app/ui-parts/answers}
 
 
-\subsubsection{Komponent prezentujący wzory oraz dane niezbędne do obliczeń}
+\subsubsection{Prezentacja wzorów~i~danych potrzebnych do obliczeń}
 \input{text/app/ui-parts/theory}
 
 
-\subsubsection{Komponent wyświetlający wygenerowany wykres}
+\subsubsection{Wyświetlanie wygenerowanego wykresu}
 \input{text/app/ui-parts/graph}
