--- a/text/app/ui-parts/tasks.tex
+++ b/text/app/ui-parts/tasks.tex
@@ -1,26 +1,27 @@
-Aplikacja została zaprojektowana~w~taki sposób, że do momentu zapisania konfiguracji niemożliwe jest zobaczenie zadań do
-wykonania oraz przejście do wykonywania ich. Na rysunku \ref{img:tasks-alert} przedstawione zostało rozwiązanie
-zastosowane~w~aplikacji -- ostrzeżenie informujące~o~tym, że należy zapisać konfigurację, aby wyświetlić zadania.
-Rysunek \ref{lst:tasks-alert-code} przedstawia natomiast implementację takiego ostrzeżenia~w~kodzie źródłowym
-aplikacji.
+Aplikacja została zaprojektowana~w~taki sposób, że do momentu zapisania konfiguracji niemożliwe jest
+zobaczenie zadań do wykonania oraz przejście do wykonywania ich. Na rysunku \ref{img:tasks-alert}
+przedstawione zostało rozwiązanie zastosowane~w~aplikacji -- ostrzeżenie informujące~o~tym, że
+należy zapisać konfigurację, aby wyświetlić zadania. Listing \ref{lst:tasks-alert-code} przedstawia
+natomiast implementację takiego ostrzeżenia~w~kodzie źródłowym aplikacji.
 
 \addimage{0.65}{app-ui/tasks-alert}{\label{img:tasks-alert}Ostrzeżenie informujące~o~konieczności
   zapisania konfiguracji}
 
-\addimage{0.9}{code/tasks-alert-code}{\label{lst:tasks-alert-code}Implementacja ostrzeżenia w
+\addsnippet{0.9}{code/tasks-alert-code}{\label{lst:tasks-alert-code}Implementacja ostrzeżenia w
   kodzie.}
 
-Do wyświetlania dodanych~w~aplikacji zadań wykorzystano metodę identyczną jak~w~przypadku komponentu konfigurującego
-sensory -- na podstawie dynamicznego mapowania tablicy,~w~tym przypadku przypisanej do każdego~z~laboratoriów,
-zawierającej obiekty~z~polami klucz-wartość. Każdy obiekt posiada informację o \colortt{taskId} (numerze), \colortt
-{content} (treści) zadania,~a~także flagę \colortt{hasData}, której zadaniem jest informowanie kod renderujący
-komponent~o~tym, czy należy wyświetlić dodatkową linię pod treścią, która zostanie uzupełniona wygenerowanymi danymi.
-Jedną~z~tablic przechowującą informację do wyświetlania zadań przedstawia rysunek \ref
-{lst:task-prompts-config}, natomiast implementację komponentu, którego zadaniem jest wyświetlanie zadań na podstawie
-tych informacji przedstawia rysunek \ref{lst:task-prompts}. 
+Do wyświetlania dodanych zadań wykorzystano metodę identyczną jak~w~przypadku komponentu
+konfigurującego sensory -- na podstawie dynamicznego mapowania tablicy,~w~tym przypadku przypisanej
+do każdego~z~laboratoriów, zawierającej obiekty~z~polami klucz-wartość. Każdy obiekt posiada
+informację o \colortt{taskId} (numerze), \colortt {content} (treści) zadania,~a~także flagę
+\colortt{hasData} -- informuje ona kod renderujący komponent~o~tym, czy należy wyświetlić dodatkową
+linię pod treścią, która zostanie uzupełniona wygenerowanymi danymi. Jedną~z~tablic przechowującą
+informację do wyświetlania zadań przedstawia listing \ref{lst:task-prompts-config}, natomiast
+implementację komponentu, którego zadaniem jest wyświetlanie zadań na podstawie tych informacji
+przedstawia listing \ref{lst:task-prompts}.
 
-\addimage{0.9}{code/task-prompts-config}{\label{lst:task-prompts-config}Tablica zawierające dane do wyświetlania
- zadań.}
+\addsnippet{0.9}{code/task-prompts-config}{\label{lst:task-prompts-config}Tablica zawierające dane
+  do wyświetlania zadań.}
 
-\addimage{0.9}{code/task-prompts}{\label{lst:task-prompts}Implementacja komponentu dynamicznie wyświetlającego zadania
- do laboratorium.}
+\addsnippet{0.9}{code/task-prompts}{\label{lst:task-prompts}Implementacja komponentu dynamicznie
+  wyświetlającego zadania do laboratorium.}
