new section: context, more polish in polish

--- a/EE-dyplom.tex
+++ b/EE-dyplom.tex
@@ -6,8 +6,8 @@
 \frontpages
 \input{text/main}
 \bibliografia
-\acronymslist
+% \acronymslist
 \listoffigures
 \listoftables
-\easyappendices
+% \easyappendices
 \end{document}
