--- a/text/app/ui-parts/answers.tex
+++ b/text/app/ui-parts/answers.tex
@@ -1,13 +1,15 @@
-Komponent zbudowany jest wykorzystując \texttt{Form Control}~z~biblioteki Chakra UI. Jego zadaniem
-jest kontrola formularza, który przyjmuje odpowiedzi użytkownika, jednakże wartości oraz weryfikacja
-ich nie są zarządzane lokalnie,~w~komponencie. Zajmują się tym zewnętrzne funkcje przekazywane
-poprzez artybuty, znane jako \texttt {props}~w~React \cite{react-docs}, które pozwalają komponentowi
-na odczytywanie obecnej wartości oraz zmianę ich. Ponieważ do implementacji aplikacji wykorzystany
-został język TypeScript każdemu artybutowi należało przypisać typ zmiennej lub funkcji, które mogą
-być przez niego przekazane do komponentu. Lista atrybutów przedstawiona została~w~listingu
-\ref{lst:form-props}, natomiast wykorzystanie ich~w~komponencie przedstawiają listingi
-\ref{lst:form-part1}, \ref{lst:form-part2}, \ref{lst:form-part3}. Pełna implementacja komponentu --
-jakie funkcje przekazywane są~z~zewnątrz -- przedstawiona została~w~rozdziale \ref{sect:laboratory}.
+Komponent zbudowany jest wykorzystując \texttt{Form Control}~z~biblioteki \textit{Chakra UI}. Jego
+zadaniem jest kontrola formularza, który przyjmuje odpowiedzi użytkownika, jednakże wartości oraz
+ich weryfikacja nie są zarządzane lokalnie~w~komponencie. Zajmują się tym zewnętrzne funkcje
+przekazywane poprzez artybuty, znane jako \texttt {props}~w~React \cite{react-docs}, które pozwalają
+komponentowi na odczytywanie obecnej wartości oraz ich zmianę. Ponieważ do implementacji aplikacji
+wykorzystany został język TypeScript każdemu artybutowi należało przypisać typ zmiennej lub funkcji,
+które mogą być przez niego przekazane do komponentu. Lista atrybutów przedstawiona
+została~w~listingu \ref{lst:form-props}, natomiast wykorzystanie ich~w~komponencie przedstawiają
+listingi \ref{lst:form-part1}, \ref{lst:form-part2}, \ref{lst:form-part3}. Dodatkowo komponent
+posiada takie samo ostrzeżenie jak ten wyświetlający zadania (co przedstawione zostało na
+rysunku \ref{img:tasks-alert}). Pełna implementacja komponentu -- jakie funkcje przekazywane
+są~z~zewnątrz -- przedstawiona została~w~rozdziale \ref{sect:laboratory}.
 
 \addsnippet{0.9}{code/form-props}{\label{lst:form-props}Artybuty, \texttt{props}, komponentu}
 
