--- a/text/app/ui-parts/theory.tex
+++ b/text/app/ui-parts/theory.tex
@@ -21,6 +21,6 @@ zawierają informacje jakie wzory oraz tabele mają zostać wygenerowane przez k
   komponentu~z~tabelami}
 
 Ponieważ pliki konfiguracyjne mają format tablicy~z~obiektami, to generowanie kolejnych wzorów oraz
-wierszy tabeli wykonywane jest przez mapowanie przez kolejne wartości. Odpowiednie
-miejsca~w~kodzie, gdzie wstawione są nazwy zmiennych odczytujących klucze~z~konfiguracji
-uzupełniane są pobranymi informacjami.
+wierszy tabeli wykonywane jest przez mapowanie kolejnych wartości. Odpowiednie miejsca~w~kodzie,
+gdzie wstawione są nazwy zmiennych odczytujących klucze~z~konfiguracji, uzupełniane są pobranymi
+informacjami.
