chapter 3 & half chapter 4

--- a/text/app/context.tex
+++ b/text/app/context.tex
@@ -33,8 +33,8 @@ W~aplikacji Context używany jest~w~celu przekazywania:
 Powyższe elementy przedstawione zostały~w~listingach \ref{lst:context-sensor},
 \ref{lst:context-functions}.
 
-\addsnippet{0.9}{code/context-sensor}{\label{lst:context-sensor}Przykładowa fragment Contextu z
+\addsnippet{code/context-sensor}{\label{lst:context-sensor}Przykładowa fragment Contextu z
   informacjami dla konkretnego laboratorium}
 
-\addsnippet{0.9}{code/context-functions}{\label{lst:context-functions}Funkcje przekazywane globalnie
+\addsnippet{code/context-functions}{\label{lst:context-functions}Funkcje przekazywane globalnie
   przez Context~w~drzewie komponentów}
