--- a/text/app/ui-parts/answers.tex
+++ b/text/app/ui-parts/answers.tex
@@ -11,14 +11,14 @@ posiada takie samo ostrzeżenie jak ten wyświetlający zadania (co przedstawion
 rysunku \ref{img:tasks-alert}). Pełna implementacja komponentu -- jakie funkcje przekazywane
 są~z~zewnątrz -- przedstawiona została~w~rozdziale \ref{sect:laboratory}.
 
-\addsnippet{0.9}{code/form-props}{\label{lst:form-props}Artybuty, \texttt{props}, komponentu}
+\addsnippet{code/form-props}{\label{lst:form-props}Artybuty, \texttt{props}, komponentu}
 
-\addsnippet{0.9}{code/form-part1}{\label{lst:form-part1}Wykorzystanie \texttt{props}~w~komponencie --
+\addsnippet{code/form-part1}{\label{lst:form-part1}Wykorzystanie \texttt{props}~w~komponencie --
   kontrola formularza, tytuł pola}
 
-\addsnippet{0.9}{code/form-part2}{\label{lst:form-part2}Wykorzystanie \texttt{props}~w~komponencie --
+\addsnippet{code/form-part2}{\label{lst:form-part2}Wykorzystanie \texttt{props}~w~komponencie --
   zarządzanie polem formularza}
 
-\addsnippet{0.9}{code/form-part3}{\label{lst:form-part3}Wykorzystanie \texttt{props}~w~komponencie --
+\addsnippet{code/form-part3}{\label{lst:form-part3}Wykorzystanie \texttt{props}~w~komponencie --
   przycisk do potwierdzania wpisywanej wartości}
 
