--- a/text/app/ui-parts/graph.tex
+++ b/text/app/ui-parts/graph.tex
@@ -9,7 +9,7 @@ wykresów jako obrazów~w~formacie PNG, aby można było je~w~późniejszym czas
 przykładowo pisząc sprawozdanie~z~wykonanego ćwiczenia laboratoryjnego. Implementacja tej
 funkcjonalności przedstawiona została~w~listingu \ref{lst:chart-download}.
 
-\addsnippet{0.9}{code/chart-download}{\label{lst:chart-download}Implementacja funkcjonalności
+\addsnippet{code/chart-download}{\label{lst:chart-download}Implementacja funkcjonalności
   zapisywania wykresów jako obrazy}
 
 Aplikacja posiada dwa warianty komponetu do wyświetlania wykresu -- \texttt{SingleLineChart} oraz
