--- a/text/app/ui-parts/sensor-config.tex
+++ b/text/app/ui-parts/sensor-config.tex
@@ -7,13 +7,13 @@ jest nie więcej niż trzy). W listingu \ref{lst:config-field} przedstawiony zos
 renderuje pojedyncze pole na podstawie informacji zawartych~w~pliku konfiguracyjnym, którego
 fragment przedstawiony został w listingu \ref{lst:config-field-data}.
 
-\addsnippet{0.9}{code/config-field-map}{\label{lst:config-field-map}Funkcja generująca pola
+\addsnippet{code/config-field-map}{\label{lst:config-field-map}Funkcja generująca pola
   na podstawie pliku konfiguracyjnego}
 
-\addsnippet{0.9}{code/config-field}{\label{lst:config-field}Kod komponentu pojedynczego pola
+\addsnippet{code/config-field}{\label{lst:config-field}Kod komponentu pojedynczego pola
   konfiguracyjnego}
 
-\addsnippet{0.9}{code/config-field-data}{\label{lst:config-field-data}Fragment pliku zawierającego
+\addsnippet{code/config-field-data}{\label{lst:config-field-data}Fragment pliku zawierającego
   dane do generowania pól konfiguracyjnych}
 
 Plik konfiguracyjny ma formę tablicy zawierającej obiekty, które definują dane pole. Każdy obiekt
