--- a/text/app/ui-parts/tasks.tex
+++ b/text/app/ui-parts/tasks.tex
@@ -7,7 +7,7 @@ natomiast implementację takiego ostrzeżenia~w~kodzie źródłowym aplikacji.
 \addimage{0.65}{app-ui/tasks-alert}{\label{img:tasks-alert}Ostrzeżenie informujące~o~konieczności
   zapisania konfiguracji}
 
-\addsnippet{0.9}{code/tasks-alert-code}{\label{lst:tasks-alert-code}Implementacja ostrzeżenia w
+\addsnippet{code/tasks-alert-code}{\label{lst:tasks-alert-code}Implementacja ostrzeżenia w
   kodzie.}
 
 Do wyświetlania dodanych zadań wykorzystano metodę identyczną jak~w~przypadku komponentu
@@ -20,8 +20,8 @@ informację do wyświetlania zadań przedstawia listing \ref{lst:task-prompts-co
 implementację komponentu, którego zadaniem jest wyświetlanie zadań na podstawie tych informacji
 przedstawia listing \ref{lst:task-prompts}.
 
-\addsnippet{0.9}{code/task-prompts-config}{\label{lst:task-prompts-config}Tablica zawierające dane
+\addsnippet{code/task-prompts-config}{\label{lst:task-prompts-config}Tablica zawierające dane
   do wyświetlania zadań.}
 
-\addsnippet{0.9}{code/task-prompts}{\label{lst:task-prompts}Implementacja komponentu dynamicznie
+\addsnippet{code/task-prompts}{\label{lst:task-prompts}Implementacja komponentu dynamicznie
   wyświetlającego zadania do laboratorium.}
