--- a/text/app/ui.tex
+++ b/text/app/ui.tex
@@ -1,14 +1,16 @@
 % Opisanie tego jak zbudowane jest UI ogólnie, nawiązanie, że opisane zostaną tylko te najważniejsze
-Całość kodu źródłowego aplikacji, która odpowiedzialna jest za renderowanie interfejsu użytkownika wykorzystuje
-paradygmat programowania komponentowego -- pozwala na projektowanie, implementację oraz testowanie elementów aplikacji
-niezależnie od siebie. Dodatkowo, jeżeli zaistnieje taka potrzeba, część kodu źródłowego może być stworzona~w~zupełnie
-innym języku programowania, a~następnie dołączona do aplikacji, gdzie będzie idealnie współpracować~z~resztą obecnych
-już komponentów \cite{component-programming}. Interfejs użytkownika~w~aplikacji jest~w~języku angielskim. Został
-stworzony~w~taki sposób, aby finalna aplikacja mogła być wykorzystywana przez użytkowników nie tylko~z~Polski.
-Interfejs użytkownika zbudowany został wykorzystując do tego bibliotekę \textit{Chakra UI}, która jest zbiorem
-modularnych komponentów przydatnych do budowania złożonych aplikacji~w~React. Udostępnia ona takie komponenty
-jak \texttt{HStack, VStack} pozwalające na ustawianie elementów na stronie, \texttt{Button, Radio, Select} -- gotowe
-przyciski, kontrola formularzy oraz \texttt{Text, Heading} do manipulacji nagłówkami~i~tekstem na stronie.
+Całość kodu źródłowego aplikacji, która odpowiedzialna jest za renderowanie interfejsu użytkownika
+wykorzystuje paradygmat programowania komponentowego -- pozwala na projektowanie, implementację oraz
+testowanie elementów aplikacji niezależnie od siebie. Dodatkowo, jeżeli zaistnieje taka potrzeba,
+część kodu źródłowego może być stworzona~w~zupełnie innym języku programowania, a~następnie
+dołączona do aplikacji, gdzie będzie idealnie współpracować~z~resztą obecnych już komponentów
+\cite{component-programming}. Interfejs użytkownika~w~aplikacji jest~w~języku angielskim. Został
+stworzony~w~taki sposób, aby finalna aplikacja mogła być wykorzystywana przez użytkowników nie
+tylko~z~Polski. Interfejs użytkownika zbudowany został wykorzystując do tego bibliotekę
+\textit{Chakra UI}, która jest zbiorem modularnych komponentów przydatnych do budowania złożonych
+aplikacji~w~React. Udostępnia ona takie komponenty jak \texttt{HStack, VStack} pozwalające na
+ustawianie elementów na stronie, \texttt{Button, Radio, Select} -- gotowe przyciski, kontrola
+formularzy oraz \texttt{Text, Heading} do manipulacji nagłówkami~i~tekstem na stronie.
 
 % Opis poszególnych, ważnych składowych UI ze snippetami
 \subsection{Elementy interfejsu}
