--- a/text/intro.tex
+++ b/text/intro.tex
@@ -17,11 +17,9 @@ wszystkich zadań dla danego laboratorium udostępniana jest możliwość zobacz
 na komputerze użytkownika, charakterystyki dla danego sensora, która związana jest~z~wykonywanym
 ćwiczeniem.
 
-Do implementacji wykorzystane zostały frameworki
-\textit{Next.js}\footnote{\href{https://nextjs.org/}{https://nextjs.org/}} oraz
-\textit{React}\footnote{\href{https://reactjs.org/}{https://reactjs.org/}}, pozwalające na tworzenie
-interaktywnych interfejsów użytkownika. Dodatkowo wykorzystana została biblioteka komponentów
-\textit{Chakra UI}\footnote{\href{https://chakra-ui.com/}{https://chakra-ui.com/}} oraz inne
-mniejsze biblioteki, które wspomagały tworzenie elementów interfejsu użytkownika. Należą one do
-rodziny Open Source (ang. Otwarte Oprogramowanie) -- ich kod źródłowy jest dostępny publicznie,
-można go wykorzystywać~i~modyfikować~w~swoich projektach, zgodnie~z~opublikowaną licencją.
+Do implementacji wykorzystane zostały frameworki \textit{Next.js} oraz \textit{React}, pozwalające
+na tworzenie interaktywnych interfejsów użytkownika. Dodatkowo wykorzystana została biblioteka
+komponentów \textit{Chakra UI} oraz inne mniejsze biblioteki, które wspomagały tworzenie elementów
+interfejsu użytkownika. Należą one do rodziny Open Source (ang. Otwarte Oprogramowanie) -- ich kod
+źródłowy jest dostępny publicznie, można go wykorzystywać~i~modyfikować~w~swoich projektach,
+zgodnie~z~opublikowaną licencją.
