--- a/text/main.tex
+++ b/text/main.tex
@@ -1,14 +1,14 @@
 \chapter{Wstęp}
 \input{text/intro}
 
-\chapter{Pomiary wielkości nieelektrycznych}
+\chapter{Pomiary wielkości nieelektrycznych}\label{sect:sensor-theory}
 \input{text/sensor-theory/sensor-theory.tex}
 
-\chapter{Projekt i implementacja aplikacji}
+\chapter{Projekt i implementacja aplikacji}\label{sect:app}
 \input{text/app/app}
 
-\chapter{Testy poprawności działania}
+\chapter{Testy poprawności działania}\label{sect:tests}
 \input{text/tests/tests}
 
-\chapter{Podsumowanie}
+\chapter{Podsumowanie}\label{sect:summary}
 \input{text/summary}
