--- a/text/sensor-theory/sensor-theory.tex
+++ b/text/sensor-theory/sensor-theory.tex
@@ -35,7 +35,7 @@ znajduje.
 \input{text/sensor-theory/dynamic-temperature.tex}
 
 % Sensory przemieszczenia - LVDT
-\section{Sensory przemieszczenia}
+\section{Sensory przemieszczenia}\label{sect:theory-lvdt}
 Sensory przemieszczenia wykorzystywane są do określania parametrów ruchu liniowego, bądź kątowego.
 Pomiarom może podlegać całkowita wartość odległości lub wyłącznie przemieszczenie obiektu.
 Wykonywanie pomiarów wymaga zdefiniowania punktu odniesienia, względem którego wykonuje się pomiar.
