--- a/text/tests/ui-tests.tex
+++ b/text/tests/ui-tests.tex
@@ -1,1 +1,8 @@
-\section{Poprawność działania interfejsu użytkownika}
+Na testy poprawności działania interfejsu użytkownika składały się:
+\begin{itemize}
+  \item [--] sprawdzenie czy do momentu zapisania konfiguracji zablokowany jest widok zadań i
+        możliwość wykonywania ich,
+  \item [--] analiza czy podczas weryfikowania odpowiedzi aplikacja odrzuca próbę zatwierdzenia
+        pustego pola lub nie poprawnej odpowiedzi,
+  \item [--] weryfikacja czy do momentu ukończenia zadań zablokowane jest wyświetlanie wykresu.
+\end{itemize}
