--- a/text/app/ui-parts/theory.tex
+++ b/text/app/ui-parts/theory.tex
@@ -8,16 +8,16 @@ jest~w~listingach \ref{lst:theory-formula} oraz \ref{lst:theory-table}, natomias
 \ref{lst:formula-config}, \ref{lst:table-config} przedstawione zostały fragmenty plików, które
 zawierają informacje jakie wzory oraz tabele mają zostać wygenerowane przez komponenty.
 
-\addsnippet{0.9}{code/theory-formula}{\label{lst:theory-formula}Kod komponentu odpowiedzialnego za
+\addsnippet{code/theory-formula}{\label{lst:theory-formula}Kod komponentu odpowiedzialnego za
   generowanie listy wzorów}
 
-\addsnippet{0.9}{code/theory-table}{\label{lst:theory-table}Komponent generujący tabele~z~danymi do
+\addsnippet{code/theory-table}{\label{lst:theory-table}Komponent generujący tabele~z~danymi do
   ćwiczenia~w~oknie dialogowym}
 
-\addsnippet{0.9}{code/formula-config}{\label{lst:formula-config}Fragment pliku~z~informacjami o
+\addsnippet{code/formula-config}{\label{lst:formula-config}Fragment pliku~z~informacjami o
   wzorach do wyświetlenia~w~oknie dialogowym}
 
-\addsnippet{0.9}{code/table-config}{\label{lst:table-config}Fragment pliku konfiguracyjnego do
+\addsnippet{code/table-config}{\label{lst:table-config}Fragment pliku konfiguracyjnego do
   komponentu~z~tabelami}
 
 Ponieważ pliki konfiguracyjne mają format tablicy~z~obiektami, to generowanie kolejnych wzorów oraz
