--- a/text/sensor-theory/lvdt.tex
+++ b/text/sensor-theory/lvdt.tex
@@ -19,7 +19,7 @@ równe. Ponieważ układ sensora LVDT jest zbudowany na podstawie transformatora
 napięcie na wyjściu całego układu będzie równe różnicy napięć na cewkach wtórnych. Zależność tę
 opisuje wzór \cite{sensory_wykład}:
 
-\begin{equation}
+\begin{equation}\label{eqn:theory-lvdt}
   U_{wy}=f\cdot I_p\cdot\bigg(4\pi\cdot N_p N_w\cdot \mu_0\cdot l_p\cdot\frac{x}{3l_w}\cdot
   \log{\Big(\frac{r_o}{r_i}\Big)}\bigg)\bigg(1-\frac{x^2}{2l_p^2}\bigg)
 \end{equation}
@@ -41,6 +41,7 @@ pomiędzy uzwojeniami wtórnymi \cite{sensory_wykład}.
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.6\textwidth]{sensor-theory/transfer-lvdt}
-  \caption{\label{img:transfer-lvdt}Charakterystyka przetwarzania sensora~w~zależności od przesunięcia.}
+  \includegraphics[width=0.9\textwidth]{sensor-theory/transfer-lvdt}
+  \caption{\label{img:transfer-lvdt}Charakterystyka przetwarzania sensora LVDT~w~zależności od
+    przesunięcia.}
 \end{figure}
